--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>mustafa-muhammed-react-folio</title>
-  <meta name="description" content="Lovable Generated Project" />
-  <meta name="author" content="Lovable" />
+  <title>Mustafa Muhammad Portfolio</title>
+  <meta name="description" content="Personal Portfolio" />
+  <meta name="author" content="Mustafa Muhammad" />
 
-  <meta property="og:title" content="mustafa-muhammed-react-folio" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:title" content="Mustafa Muhammad Portfolio" />
+  <meta property="og:description" content="Personal Portfolio Website" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@lovable_dev" />
