--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mustafa Muhammad Portfolio</title>
-  <meta name="description" content="Personal Portfolio" />
-  <meta name="author" content="Mustafa Muhammad" />
+  <title>Mustafa Muhammed - Full Stack Python Developer</title>
+  <meta name="description" content="Full Stack Python Developer Portfolio - Django, Flask, React.js" />
+  <meta name="author" content="Mustafa Muhammed" />
 
-  <meta property="og:title" content="Mustafa Muhammad Portfolio" />
-  <meta property="og:description" content="Personal Portfolio Website" />
+  <meta property="og:title" content="Mustafa Muhammed - Full Stack Python Developer" />
+  <meta property="og:description" content="Full Stack Python Developer Portfolio - Django, Flask, React.js" />
   <meta property="og:type" content="website" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 </head>
 
 <body>
   <div id="root"></div>
-  <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-  <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
