--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/icon.png" />
+  <link rel="shortcut icon" type="image/png" href="/icon.png" />
+  <link rel="apple-touch-icon" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mustafa Muhammed - Full Stack Python Developer</title>
   <meta name="description" content="Full Stack Python Developer Portfolio - Django, Flask, React.js" />
@@ -12,8 +14,11 @@
   <meta property="og:title" content="Mustafa Muhammed - Full Stack Python Developer" />
   <meta property="og:description" content="Full Stack Python Developer Portfolio - Django, Flask, React.js" />
   <meta property="og:type" content="website" />
+  <meta property="og:image" content="/icon.png" />
+  <meta property="og:url" content="https://your-portfolio-url.com" />
 
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="/icon.png" />
 </head>
 
 <body>
